--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ body {
 
 .crystal .hitbox {
   position: absolute;
-  width: 40px;
-  height: 50px;
+  width: 35px;
+  height: 45px;
   bottom: 10px;      
   left: 10px;       
   background: rgba(0,255,0,0);
@@ -107,8 +107,8 @@ body {
 
 .fire .hitbox {
   position: absolute;
-  width: 50px;
-  height: 60px;
+  width: 40px;
+  height: 50px;
   bottom: 10px;
   left: 15px;
   background: rgba(255, 0, 0, 0); 
@@ -261,7 +261,8 @@ body {
   font-weight: bold;
   border-radius: 8px;
   transition: background 0.3s;
-  z-index: 1000;        /* чтобы не перекрывалась другими элементами */
+  z-index: 1000;       
+   touch-action: manipulation; /* чтобы не перекрывалась другими элементами */
 }
 
 .game-btn:hover {
