--- a/style.css
+++ b/style.css
@@ -19,10 +19,16 @@ body {
   border: 4px solid #333;   /* можно добавить рамку, чтобы видно было */
   border-radius: 12px;
 
-  background-image: url("images/bg1.PNG");
-  background-repeat: repeat-x;
-  background-size: auto 100%;
-  background-position: bottom;
+  background-image: url("images/bg1.png"); /* твой большой фон */
+  background-repeat: repeat-x; /* повтор по горизонтали */
+  background-size: auto 100%;  /* масштаб по высоте */
+  background-position: 0 0;
+  animation: bgMove 10s linear infinite;
+}
+
+@keyframes bgMove {
+  0%   { background-position-x: 0; }
+  100% { background-position-x: -2197px; } /* смещение по ширине картинки */
 }
 
 /* Счет и HUD привяжем внутри игрового окна */
@@ -32,7 +38,7 @@ body {
 
 #cat {
   position: absolute;
-  bottom: 0;
+  bottom: 140px;
   left: 5vw;
   width: 100px;
   height: 100px;
@@ -53,7 +59,7 @@ body {
 
 .crystal {
   position: absolute;
-  bottom: 0;
+  bottom: 100px;
   width: 70px;
   height: 100px;
   background: url("images/crystal.png") no-repeat center/contain;
@@ -72,7 +78,7 @@ body {
 
 #hud {
   position: absolute;
-  top: 20px;
+  top: -20px;
   left: 20px;
 }
 
@@ -98,7 +104,7 @@ body {
 
 .fire {
   position: absolute;
-  bottom: 0;
+  bottom: 100px;
   width: 80px;
   height: 100px;
   background: url("images/fire.png") no-repeat center/contain;
