--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   border: 4px solid #333;   /* можно добавить рамку, чтобы видно было */
   border-radius: 12px;
 
-  background-image: url("images/bg1.png"); /* твой большой фон */
+  background-image: url("images/bg1.PNG"); /* твой большой фон */
   background-repeat: repeat-x; /* повтор по горизонтали */
   background-size: auto 100%;  /* масштаб по высоте */
   background-position: 0 0;
